Updated personal webpage links

--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
                 </div>            	
 
               <div class="col-lg-4">.
-                <img class="rounded-circle" src="images/rashmeet.jpg" alt="Rashmeet K Nayyar" width="140" height="140">
-                </br></br><h4>Rashmeet K Nayyar</h4>
+                <a href="https://www.rashmeetnayyar.com/" target="_blank"><img class="rounded-circle" src="images/rashmeet.jpg" alt="Rashmeet K Nayyar" width="140" height="140"></a>
+                </br></br><h4><a href="https://www.rashmeetnayyar.com/" target="_blank">Rashmeet K Nayyar</a></h4>
                 <p>Ph.D. Student</p>
               </div>
 
               <div class="col-lg-4">
-                	<img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140">
-                	</br></br><h4><a href = "https://namanshah.net" target = "_Blank" >Naman P Shah </a></h4>
-                	<p>Ph.D. Student</p>
+                <a href="https://namanshah.net" target="_blank"><img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140"></a>
+                </br></br><h4><a href = "https://namanshah.net" target = "_blank" >Naman P Shah</a></h4>
+                <p>Ph.D. Student</p>
               	</div>
               
             </div>
@@ -280,9 +280,9 @@
           <center>
             <div class="row">
               <div class="col-lg-4">
-                <a href="https://pulkitverma25.github.io" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
-                  </br></br><h4><a href="https://pulkitverma25.github.io" target="_blank">Pulkit Verma</a></h4>
-                  <p>Ph.D. Student</p>
+                <a href="https://pulkitverma.net" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
+                </br></br><h4><a href="https://pulkitverma.net" target="_blank">Pulkit Verma</a></h4>
+                <p>Ph.D. Student</p>
                 </div>
               <div class="col-lg-4">
                 <a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank"><img class="rounded-circle" src="images/shashank.jpeg" alt="Shashank Rao Marpally" width="140" height="140"></a>
