removed to appear

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <em><a href = "Publications/skkks_icra20.pdf" target = "_Blank">Anytime Task and Motion Policies for Stochastic Environments</a></em>.<br>
                 <a href="stamp.html">Project Page</a><br>
                 Naman Shah, Deepak Kala Vasudevan, Kislay Kumar, Pranav Kamojhalla,  Siddharth Srivastava.<br>
-                In Proceedings of ICRA 2020. (to appear) <br>
+                In Proceedings of ICRA 2020.<br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-secondary">Mobile Manipulation</span>
               </li>
@@ -459,7 +459,7 @@
                 <em><a href="Publications/mks_icra20.pdf">Learn and Link: Learning Critical Regions for Efficient Planning</a></em>.<br>
                 <a href="ll.html">Project Page</a><br>
                 Daniel Molina, Kislay Kumar, Siddharth Srivastava.<br>
-                In Proceedings of ICRA 2020. (to appear) <br>
+                In Proceedings of ICRA 2020.<br>
 
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-warning">Learning</span>
@@ -484,7 +484,7 @@
               <li> 
                 <em><a href="Publications/ksk_aamas20.pdf">Signaling Friends and Head-Faking Enemies Simultaneously: Balancing Goal Obfuscation and Goal Legibility (extended abstract)</a></em>.<br>
                 Anagha Kulkarni, Siddharth Srivastava, Subbarao Kambhampati.<br>
-                In Proceedings of AAMAS, 2020. (to appear) <br>
+                In Proceedings of AAMAS, 2020.<br>
                 <span class="badge badge-success">Assistive Planning</span>
                 <span class="badge badge-dark">Partial Observability</span>
               </li>
