--- a/archive.html
+++ b/archive.html
@@ -63,7 +63,7 @@
             <div class="col-lg-6 justify-content-center align-items-center" style="margin-bottom:25px;">
               <div class="card justify-content-center align-items-center" style="margin:0 center;">
                 <div class="card-body">
-                  <h4 class="card-title">AAIR Lab Group - Fall 2018</h4>
+                  <h4 class="card-title">AAIR Group - Fall 2018</h4>
                   <img src="images/group_f18.jpg" class="card-img-bottom">
                 </div>  <div class="container"> 
               </div>
