--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
             <div class="col-lg-6 justify-content-center align-items-center" style="margin-bottom:25px;">
               <div class="card justify-content-center align-items-center" style="margin:0 center;">
                 <div class="card-body">
-                  <h4 class="card-title">AAIR Lab Group - Summer 2020</h4>
+                  <h4 class="card-title">AAIR Group - Summer 2020</h4>
                   <img src="images/group_su20.png" class="card-img-bottom">
                 </div>  <div class="container"> 
               </div>
             </div>
-            <a href="archive.html">Older group photos</a>
+            <a href="archive.html">Older Group Photos</a>
 
           </center>
 	        <!-- src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" if image not available-->          
