--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <div class="col-lg-6 justify-content-center align-items-center" style="margin-bottom:25px;">
               <div class="card justify-content-center align-items-center" style="margin:0 center;">
                 <div class="card-body">
-                  <h4 class="card-title">AAIR Group - Summer 2020</h4>
+                  <h4 class="card-title">Group Photo</h4>
                   <img src="images/group_su20.png" class="card-img-bottom">
                 </div>  <div class="container"> 
               </div>
