--- a/index.html
+++ b/index.html
@@ -441,6 +441,17 @@
           -->
 
           <br>
+          <div class="paper assistPlanning abstraction">
+            <ul class="papers">
+              <li>
+                <em><a href="Publications/ssvsk_hill20.pdf">Bridging the Gap: Providing Post-Hoc Symbolic Explanations for Sequential Decision-Making Problems with Inscrutable Representations</a></em>.<br>
+                Sarath Sreedharan, Utkarsh Soni, Mudit Verma, Siddharth Srivastava, Subbarao Kambhampati.<br>
+                ICML 2020 Workshop on Human in the Loop Learning, 2020. <br>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+                <span class="badge badge-success">Assistive Planning</span>
+              </li>
+            </ul>
+          </div>
           <div class="paper abstraction mobManipulation">
             <ul class="papers">
               <li> 
@@ -493,9 +504,9 @@
           <div class="paper assistPlanning abstraction">
             <ul class="papers">
               <li> 
-                <em><a href="Publications/vs_genplan20.pdf">Learning Generalized Models by Interrogating Black-Box Autonomous Agents</a></em>.<br>
+                <em><a href="https://arxiv.org/pdf/1912.12613.pdf" target="_blank">Learning Generalized Models by Interrogating Black-Box Autonomous Agents</a></em>.<br>
                 Pulkit Verma, Siddharth Srivastava.<br>
-                AAAI Workshop on Generalization in Planning,  2020.<br>
+                AAAI Workshop on Generalization in Planning, 2020.<br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-success">Assistive Planning</span>
               </li>
