--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+# Jekyll, my lord, please process this page :)
+---
+
 <!DOCTYPE html>
 <html lang="en">
  <head>
@@ -15,40 +19,9 @@
  </head>
 
  <body>
-    <!--Navigation Bar-->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#research">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#people">People</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#publications">Publications</a>
-          </li>
-          <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Teaching</a>
-                <div class="dropdown-menu">
-                    <a href="teaching/571_f19.html" class="dropdown-item">CSE 571: Fall 2019</a>
-                    <a href="teaching/571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
-                    <a href="teaching/471_f18.html" class="dropdown-item">CSE 471: Fall 2018</a>
-                    <a href="teaching/591_s18.html" class="dropdown-item">CSE 591: Spring 2018</a>
-                </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact Us</a>
-          </li>
-        </ul>            
-      </div>
-    </nav>
+
+    <!-- Navigation Bar -->
+    {% include navigation.html %}
 
 		<!--Background Cover Photo-->					      
     <div class="img-responsive" id="home">
