GenPlan tag updated

--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
                 AAAI Workshop on Generalization in Planning, 2020.<br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-success">Assistive Planning</span>
+                <span class="badge badge-pink">Generalized Planning</span>
               </li>
             </ul>
           </div>
