--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
               </li>
             </ul>
           </div>
-          <div class="paper assistPlanning abstraction">
+          <div class="paper assistPlanning abstraction generalizedPlanning">
             <ul class="papers">
               <li> 
                 <em><a href="https://arxiv.org/pdf/1912.12613.pdf" target="_blank">Learning Generalized Models by Interrogating Black-Box Autonomous Agents</a></em>.<br>
