added common footer

--- a/archive.html
+++ b/archive.html
@@ -49,19 +49,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="" style="max-width: 100%">
-      <footer class="container" style="color: #000000;">
-        <p class="float-left">
-          <a href="https://cidse.engineering.asu.edu/" target="_blank"><img src="images/cidse-2.png" style="width:100%" alt="CIDSE logo"></a>
-          <br>
-          <br>
-          <br>
-          © AAIR Lab, ASU. 2019. All rights reserved.
-        </p>
-        <p class="float-right">
-          <a href="#">Back to top</a></br>
-        </p>
-      </footer>
-    </div>
+    {% include footer.html %}
+    
   </body>
 </html>
