--- a/teaching/571_f19_hw/hw0.html
+++ b/teaching/571_f19_hw/hw0.html
@@ -293,21 +293,9 @@
       </div>
     </div>
   
-    <div class = "col-sm-1"></div>
-    <div class="" style="max-width: 100%">
-      <footer class="container" style="color: #000000;">
-        <p class="float-left">
-          <a href="https://cidse.engineering.asu.edu/" target="_blank"><img src="../../images/cidse-2.png" style="width:100%" alt="CIDSE logo"></a>
-          <br />
-          <br />
-          <br />
-          © AAIR Lab, ASU. 2019. All rights reserved.
-        </p>
-        <p class="float-right">
-          <a href="#">Back to top</a><br />
-        </p>
-      </footer>
-    </div>
+    <!-- Footer -->
+    {% include footer.html %}
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script></div>
   </body>
