--- a/teaching/571_f19_hw/vm_import.html
+++ b/teaching/571_f19_hw/vm_import.html
@@ -1,4 +1,6 @@
-
+---
+# Jekyll, my lord, please process this page :)
+---
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,8 +17,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="../../images/aair_logo_square.png" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script></div>
-    <link rel="stylesheet" href="../css/academicons.min.css"/>
+    <script src="../../js/bootstrap.min.js"></script></div>
+    <link rel="stylesheet" href="../../css/academicons.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Cairo|Abel|Rajdhani|Dosis' rel='stylesheet' type='text/css'>
   </head>
 
