--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                 <p>M.S. Student</p>
               </div>
               <div class="col-lg-4">
-                <img class="rounded-circle" src="images/ayan.png" alt="Ayan Joshi" width="140" height="140">
-                </br></br><h4>Ayan Joshi</h4>
+                <a href="https://ayanjoshi.github.io/" target="_blank"><img class="rounded-circle" src="images/ayan.png" alt="Ayan Joshi" width="140" height="140"></a>
+                </br></br><h4><a href="https://ayanjoshi.github.io/" target="_blank">Ayan Joshi</a></h4>
                 <p>B.S. Student</p>
               </div>
               <div class="col-lg-4">
