removed references to location and zoom

--- a/teaching/471_f20/index.html
+++ b/teaching/471_f20/index.html
@@ -40,7 +40,7 @@
           <h1 id="471"> CSE 471: Introduction to Artificial Intelligence</h1>
 
           <h3>Fall 2020</h3>
-          <h3>01:30 pm - 02:45 pm Tuesdays and Thursdays | CAVC 351, Zoom: TBA </h3>
+          <h3>01:30 pm - 02:45 pm Tuesdays and Thursdays </h3>
           <br />
 
           <h3><ptitle>Instructor</ptitle></h3> 
