Made syllabus consistent with myasu version

--- a/teaching/471_f20/index.html
+++ b/teaching/471_f20/index.html
@@ -334,7 +334,7 @@
           <h3>Course format</h3>
           <p>
             There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). 
-            Students will be evaluated based on in-class quizzes (45%), homework assignments (25%) including
+            Students will be evaluated based on class participation (2%), in-class quizzes (43%), homework assignments (25%) including
             programming assignments, and midterm and final exams (30%).
           </p>
           
@@ -375,7 +375,7 @@
           <p>
             <b>Textbook:</b> Artificial Intelligence: A Modern Approach, 4th Edition by Stuart Russell
             and Peter Norvig <br>
-            <b>Online Discussions and Polls:</b> Course Canvas Page <br>
+            <b>Online Discussions and Polls:</b>Slack Workspace<br>
           </p>
           <br>
 
