Added Mehdi, Moved Abhyudaya to Alumni

--- a/index.html
+++ b/index.html
@@ -228,24 +228,23 @@
           <!--Second Row-->
           <center>
             <div class="row">
-                <div class="col-lg-4">
-                  <img class="rounded-circle" src="images/rushang2.jpg" alt="Rushang Karia" width="140" height="140">
-                  </br></br><h4>Rushang Karia</h4>
-                  <p>Ph.D. Student</p>
-                </div>            	
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="images/mehdi.jpg" alt="Mehdi Dadvar" width="140" height="140">
+                </br></br><h4>Mehdi Dadvar</h4>
+                <p>Ph.D. Student</p>
+              </div>
+
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="images/rushang.jpg" alt="Rushang Karia" width="140" height="140">
+                </br></br><h4>Rushang Karia</h4>
+                <p>Ph.D. Student</p>
+              </div>            	
 
               <div class="col-lg-4">.
                 <a href="https://www.rashmeetnayyar.com/" target="_blank"><img class="rounded-circle" src="images/rashmeet.jpg" alt="Rashmeet K Nayyar" width="140" height="140"></a>
                 </br></br><h4><a href="https://www.rashmeetnayyar.com/" target="_blank">Rashmeet K Nayyar</a></h4>
                 <p>Ph.D. Student</p>
               </div>
-
-              <div class="col-lg-4">
-                <a href="https://namanshah.net" target="_blank"><img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140"></a>
-                </br></br><h4><a href = "https://namanshah.net" target = "_blank" >Naman P Shah</a></h4>
-                <p>Ph.D. Student</p>
-              	</div>
-              
             </div>
           </center>
           </br></br></br>
@@ -254,18 +253,20 @@
           <center>
             <div class="row">
               <div class="col-lg-4">
+                <a href="https://namanshah.net" target="_blank"><img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140"></a>
+                </br></br><h4><a href = "https://namanshah.net" target = "_blank" >Naman P Shah</a></h4>
+                <p>Ph.D. Student</p>
+              </div> 
+
+              <div class="col-lg-4">
                 <a href="https://pulkitverma.net" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
                 </br></br><h4><a href="https://pulkitverma.net" target="_blank">Pulkit Verma</a></h4>
                 <p>Ph.D. Student</p>
-                </div>
+              </div>
+
               <div class="col-lg-4">
                 <a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank"><img class="rounded-circle" src="images/shashank.jpeg" alt="Shashank Rao Marpally" width="140" height="140"></a>
                 </br></br><h4><a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank">Shashank Rao Marpally</a></h4>
-                <p>M.S. Student</p>
-              </div>
-              <div class="col-lg-4">
-                <img class="rounded-circle" src="images/abhyudaya.jpeg" alt="Abhyudaya Srinet" width="140" height="140">
-                </br></br><h4>Abhyudaya Srinet</h4>
                 <p>M.S. Student</p>
               </div>
             </div>
@@ -324,6 +325,11 @@
   								  <thead>
   								  </thead>
   								  <tbody>
+                      <tr >
+                        <td>Abhyudaya Srinet</td>
+                        <td>M.S.</td>
+                        <td>Aug 2019 - Aug 2020</td>
+                      </tr>
                       <tr >
                         <td>Kislay Kumar</td>
                         <td>M.S.</td>
