updated Shashank's webpage

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
               </div>
 
               <div class="col-lg-4">
-                <a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank"><img class="rounded-circle" src="images/shashank.jpeg" alt="Shashank Rao Marpally" width="140" height="140"></a>
-                </br></br><h4><a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank">Shashank Rao Marpally</a></h4>
+                <a href="https://marpally-raoshashank.netlify.app/" target="_blank"><img class="rounded-circle" src="images/shashank.jpeg" alt="Shashank Rao Marpally" width="140" height="140"></a>
+                </br></br><h4><a href="https://marpally-raoshashank.netlify.app/" target="_blank">Shashank Rao Marpally</a></h4>
                 <p>M.S. Student</p>
               </div>
             </div>
